@@ -1,7 +1,8 @@
 package toby.command.commands.misc;
 
-import net.dv8tion.jda.api.entities.Message;
-import net.dv8tion.jda.api.entities.TextChannel;
+import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
+import net.dv8tion.jda.api.interactions.commands.OptionType;
+import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import toby.command.CommandContext;
 import toby.command.ICommand;
 import toby.jpa.dto.MusicDto;
@@ -23,47 +24,46 @@ public class UserInfoCommand implements IMiscCommand {
     }
 
     @Override
-    public void handle(CommandContext ctx, String prefix, UserDto requestingUserDto, Integer deleteDelay) {
-        ICommand.deleteAfter(ctx.getMessage(), deleteDelay);
-        final TextChannel channel = ctx.getChannel();
-        final Message message = ctx.getMessage();
+    public void handle(CommandContext ctx, UserDto requestingUserDto, Integer deleteDelay) {
+        ICommand.deleteAfter(ctx.getEvent().getHook(), deleteDelay);
+        final SlashCommandInteractionEvent event = ctx.getEvent();
 
-        printUserInfo(channel, message, requestingUserDto, deleteDelay);
+        printUserInfo(event, requestingUserDto, deleteDelay);
     }
 
-    private void printUserInfo(TextChannel channel, Message message, UserDto requestingUserDto, Integer deleteDelay) {
-        if (message.getMentions().getMembers().isEmpty()) {
+    private void printUserInfo(SlashCommandInteractionEvent event, UserDto requestingUserDto, Integer deleteDelay) {
+        if (event.getOptions().isEmpty()) {
             if (requestingUserDto != null) {
-                channel.sendMessage(String.format("Here are your permissions: '%s'.", requestingUserDto)).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                event.replyFormat("Here are your permissions: '%s'.", requestingUserDto).setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
                 MusicDto musicDto = requestingUserDto.getMusicDto();
                 if (musicDto != null) {
                     if (musicDto.getFileName() == null || musicDto.getFileName().isBlank()) {
-                        channel.sendMessage("There is no intro music file associated with your user.").queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                        event.reply("There is no intro music file associated with your user.").setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
 
                     } else if (musicDto.getFileName() != null) {
-                        channel.sendMessage(String.format("Your intro song is currently set as: '%s'.", musicDto.getFileName())).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                        event.replyFormat("Your intro song is currently set as: '%s'.", musicDto.getFileName()).setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
                     }
                 } else
-                    channel.sendMessage("I was unable to retrieve your music file.").queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                    event.reply("I was unable to retrieve your music file.").setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
             }
         } else {
             if (requestingUserDto.isSuperUser()) {
-                message.getMentions().getMembers().forEach(member -> {
+                event.getOption("Users").getMentions().getMembers().stream().forEach(member -> {
                     UserDto mentionedUser = userService.getUserById(member.getIdLong(), member.getGuild().getIdLong());
-                    channel.sendMessageFormat("Here are the permissions for '%s': '%s'.", member.getEffectiveName(), mentionedUser).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                    event.replyFormat("Here are the permissions for '%s': '%s'.", member.getEffectiveName(), mentionedUser).setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
                     MusicDto musicDto = mentionedUser.getMusicDto();
                     if (musicDto != null) {
                         if (musicDto.getFileName() == null || musicDto.getFileName().isBlank()) {
-                            channel.sendMessageFormat("There is no intro music file associated with '%s'.", member.getEffectiveName()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                            event.replyFormat("There is no intro music file associated with '%s'.", member.getEffectiveName()).setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
 
                         } else if (musicDto.getFileName() != null) {
-                            channel.sendMessage(String.format("Their intro song is currently set as: '%s'.", musicDto.getFileName())).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                            event.replyFormat("Their intro song is currently set as: '%s'.", musicDto.getFileName()).setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
                         }
                     } else
-                        channel.sendMessageFormat("I was unable to retrieve an associated music file for '%s'.", member.getNickname()).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
+                        event.replyFormat("I was unable to retrieve an associated music file for '%s'.", member.getNickname()).setEphemeral(true).queue(message1 -> ICommand.deleteAfter(message1, deleteDelay));
                 });
             }
-            else channel.sendMessage("You do not have permission to view user permissions, if this is a mistake talk to the server owner").queue();
+            else event.reply("You do not have permission to view user permissions, if this is a mistake talk to the server owner").setEphemeral(true).queue();
         }
     }
 
@@ -73,14 +73,16 @@ public class UserInfoCommand implements IMiscCommand {
     }
 
     @Override
-    public String getHelp(String prefix) {
-        return "Let me tell you about your permissions.\n" +
-                String.format("Usage: `%suserinfo`", prefix) +
-                String.format("Aliases are: '%s'", String.join(",", getAliases()));
+    public String getDescription() {
+        return "Let me tell you about the permissions tied to the user mentioned (no mention is your own).";
+    }
+
+    private List<String> getAliases() {
+        return Arrays.asList("getuser", "info", "permissions", "permission", "perm");
     }
 
     @Override
-    public List<String> getAliases() {
-        return Arrays.asList("getuser", "info", "permissions", "permission", "perm");
+    public List<OptionData> getOptionData() {
+        return List.of(new OptionData(OptionType.STRING, "Users", "List of users to print info about"));
     }
 }
